<?xml version="1.0" encoding="utf-8"?>
<com.foodtechlab.ftlandroiduikit.container.FTLConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clMenuRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundPrimary">

    <com.foodtechlab.ftlandroiduikit.button.FTLButton
        android:id="@+id/btnGoToShowroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        app:ftlButton_text="@string/common_showroom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.foodtechlab.ftlandroiduikit.button.FTLButton
        android:id="@+id/btnGoToPlayground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:ftlButton_text="@string/common_playground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoToShowroom" />

    <com.foodtechlab.ftlandroiduikit.switch.FTLSwitch
        android:id="@+id/scTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/menu_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivDecorScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</com.foodtechlab.ftlandroiduikit.container.FTLConstraintLayout>